welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:11: error: 'while' expected but '}' found.
	}
        ^